# nhs_omop_ncp

./: .gitignore  config.py  pyproject.toml
data/cohort_run_outputs/: cohort_run_20260707_223421.json
notebooks/: 01_eda_omop.ipynb
scripts/: check_ollama.py  check_server.py  deps_check.py  extract_omop.py
src/agents/: omop_agent.py
src/config/: settings.py
src/data_access/: connection.py  omop_queries.py
src/mcp_server/: server.py  skills_server.py
src/mcp_server/resources/skills/: omop_clinical_reasoning.md
src/scripts/: check_agent.py  check_gpu.py  check_mlflow.py  check_queries.py  check_skills_server.py  cohort_run.py  cohort_summary.py  debug_agent.py  download_skills.py  finetune.py  generate_dataset.py  relabel_dataset.py
tests/integration/: test_mcp_tools.py
