[project]
name = "nhs-omop-mcp"
version = "0.1.0"
description = "FastMCP server + LangChain agent over synthetic OMOP CDM v5.4 — NHS AI MSc Placement"
requires-python = ">=3.11"
dependencies = [
    # Data layer
    "duckdb>=1.1.0",
    "ibis-framework[duckdb]>=9.0.0",
    # MCP server
    "fastmcp>=2.0.0",
    # Agent orchestration
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    "openai>=1.50.0",
    "deepagents>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    # Validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # MLOps
    "mlflow>=2.14.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "mlflow-skinny>=3.14.0",
    "duckdb-engine>=0.17.0",
]

[project.optional-dependencies]
finetune = [
    "torch>=2.7.0",
    "transformers>=4.42.0",
    "peft>=0.11.0",
    "datasets>=2.20.0",
    "accelerate>=0.31.0",
    "bitsandbytes>=0.43.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true